# cr-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev_server.py  pytest.ini  railway.toml
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: auth.py  deps.py  evaluation.py  health.py  models.py  reviews.py  webhooks.py
backend/cli/: __main__.py  main.py
backend/core/: common.py  config.py  database.py  languages.py  llm.py  retry.py  security.py
backend/data/: dataset.json  eval_llm_full.md
backend/integrations/: github.py
backend/mcp/: __init__.py  server.py
backend/models/: __init__.py  review.py  task.py
backend/schemas/: review.py  task.py
backend/services/aggregator/: merge.py  report.py
backend/services/evaluation/: cost.py  dataset.py  eval.py  judge.py  metrics.py
backend/services/supervisor/: decompose.py  graph.py  state.py
backend/services/workers/: base.py  performance.py  quality.py  registry.py  (+2 more)
backend/static/: index.html
backend/tests/: conftest.py  test_aggregator.py  test_api.py  test_api_auth.py  test_cli.py  test_config_multi_model.py  test_database_postgres.py  test_dedup_languages.py  test_dedup_workers.py  test_e2e.py  test_eval.py  test_eval_cost.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_report.py  test_evaluation_api.py  test_github.py  test_health_api.py  test_llm_timeout.py  test_mcp.py  test_mcp_auth.py  test_models.py  test_models_api.py  test_resilience.py  test_review_response_schema.py  test_security.py  test_supervisor.py  test_webhook.py  test_workers.py
(+6 files in other folders)
